# stonescriptdb-gateway

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.build  Dockerfile.build.example  HLD.md  LICENSE  PLATFORM-CREDENTIALS.md  README.md  build.sh  deploy.sh  project-info.yaml
deploy/: db-gateway.service  install.sh  stonescriptdb-gateway.service
docs/: API-V2.md  DECLARATIVE_SCHEMA_PROPOSAL.md  DEV-ENVIRONMENT.md  DOCUMENTATION-AUDIT.md  INTEGRATION.md  QUICKSTART.md  README.md  REORGANIZATION-SUMMARY.md
docs/api/: v2.md
docs/getting-started/: README.md
docs/guides/: development.md  integration.md
scripts/: migrate-schema.sh  register-with-gateway.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: admin.rs  call.rs  database.rs  health.rs  migrate.rs  migrate_v2.rs  mod.rs  platform.rs  register.rs
src/pool/: manager.rs  mod.rs  router.rs
src/registry/: mod.rs  platform.rs  schema.rs
src/schema/: audit.rs  changelog.rs  custom_types.rs  dependency.rs  diff.rs  extensions.rs  extractor.rs  functions.rs  migration.rs  mod.rs  seeder.rs  tables.rs  types.rs  verifier.rs
src/security/: admin_auth.rs  ip_filter.rs  mod.rs
tests/: run-tests.sh
tests/sample-todos-app/postgresql/functions/: add_tag_to_todo.pssql  delete_todo.pssql  get_all_tags.pssql  get_todo_by_id.pssql  get_todo_stats.pssql  get_todos_by_user.pssql  get_user_by_id.pssql  insert_todo.pssql  mark_todo_complete.pssql  update_todo.pssql
tests/sample-todos-app/postgresql/migrations/: 001_create_users.pssql  002_create_todos.pssql  003_create_tags.pssql  004_seed_data.pssql
