[package]
name = "stonescriptdb-gateway"
version = "0.4.0"
edition = "2021"
description = "Multi-tenant PostgreSQL database gateway and schema orchestrator for StoneScript platforms"
authors = ["Progalaxy E-Labs"]
license = "MIT"

[[bin]]
name = "stonescriptdb-gateway"
path = "src/main.rs"

[[bin]]
name = "analyze-deps"
path = "src/bin/analyze-deps.rs"

[[bin]]
name = "type-matrix"
path = "src/bin/type-matrix.rs"

[lib]
name = "stonescriptdb_gateway"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive"] }

# Concurrent data structures
dashmap = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Environment
dotenvy = "0.15"

# Archive handling
flate2 = "1"
tar = "0.4"

# Checksums
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# IP address parsing
ipnetwork = "0.20"

# URL encoding
urlencoding = "2"

# Temp file handling
tempfile = "3"

# SQL parsing
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
